--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
   get: ^4.6.6
+  go_router: ^15.1.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
